arrow-reflect-compiler-plugin/src/testData/diagnostics/log_test.kt
package foo.bar

import arrow.meta.samples.Log

val x = @Log <!META_LOG!>0<!>
